--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ body {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    /* border-radius: 100px; */
+    border-radius: 100px;
 /* }@media only screen and (max-width: 768px) {
   /* Phone ke liye design */
 }
